[gd_scene load_steps=7 format=3 uid="uid://ku60ryjoq0fh"]

[ext_resource type="Script" path="res://Objects/UI/Elements/ListBattle.gd" id="1_m87xh"]
[ext_resource type="Texture2D" uid="uid://dcyqx136k3a5o" path="res://Graphics/UI/Arrows/ChoiceSelection.tres" id="2_pn4ym"]
[ext_resource type="FontFile" path="res://Fonts/DialogueFont.tres" id="3_0rhos"]
[ext_resource type="Texture2D" uid="uid://bcm8hagac420t" path="res://Graphics/UI/Arrows/Selectable.png" id="3_pgrqb"]
[ext_resource type="Texture2D" uid="uid://5hbt17w1giq4" path="res://Graphics/UI/Menus/Challenge/BattleIncomplete.png" id="4_bxfk8"]

[sub_resource type="LabelSettings" id="LabelSettings_vhqie"]
resource_local_to_scene = true
font = ExtResource("3_0rhos")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="ListBattle" type="HBoxContainer"]
offset_right = 479.0
offset_bottom = 20.0
focus_mode = 2
script = ExtResource("1_m87xh")

[node name="Arrow" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_pn4ym")
stretch_mode = 3

[node name="FArrow" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_pgrqb")
stretch_mode = 3

[node name="Complete" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("4_bxfk8")
stretch_mode = 3

[node name="Name" type="Label" parent="."]
layout_mode = 2
text = "Put the battle name here"
label_settings = SubResource("LabelSettings_vhqie")

[node name="BossLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "(BOSS)"
label_settings = SubResource("LabelSettings_vhqie")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
